# MiniCheck

./: CHANGELOG.md  LICENSE  MiniCheck.cabal  README.md  run-example.bat  run-examples.bat  run-examples.sh
.github/workflows/: haskell.yml
app/: Main.hs
app/core/transition-system/: TransitionSystem.hs
docs/: MiniCheck.tex
examples/: invalid.txt  labels.txt  vending-machine.txt
lib/: Semantics.hs  Utils.hs  Validator.hs
lib/CTL/: Model.hs  Parser.hs  Semantics.hs  Validator.hs
lib/LTL/: Model.hs  Parser.hs  Semantics.hs  Validator.hs
lib/TS/: Model.hs  Parser.hs  Validator.hs
slides/: package.json  pnpm-lock.yaml  slides.md
test/: SemanticsSpec.hs  Spec.hs
test/CTL/: ParserSpec.hs  SemanticsSpec.hs
test/LTL/: ParserSpec.hs  SemanticsSpec.hs
test/TS/: ParserSpec.hs
