cabal-version:      3.4
name:               MiniCheck
version:            0.1.0.0
synopsis:           Computational Tree Logic Model Checker
description:        MiniCheck is a CLI for CTL and bounded LTL model checking on transition systems.
homepage:           https://github.com/DerYeger/MiniCheck
license:            MIT
license-file:       LICENSE
author:             Jan Müller
maintainer:         janmueller3698@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common deps
  ghc-options:      -Wall
  build-depends:    base ^>= 4.16.4.0,
                    cmdargs ^>= 0.10.22,
                    containers ^>= 0.6.7,
                    parsec ^>= 3.1.16.1

executable MiniCheck
    import:           deps
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    MiniCheck

library
    import:           deps
    hs-source-dirs:   lib
    default-language: Haskell2010
    exposed-modules:
        CTL.Model,
        CTL.Parser,
        CTL.Validator,
        CTL.Semantics,
        LTL.Model,
        LTL.Parser,
        LTL.Semantics,
        LTL.Validator,
        TS.Model,
        TS.Parser,
        TS.Validator
    other-modules:
        Utils

test-suite MiniCheck-test
  import:           deps
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:    MiniCheck,
                    hspec ^>= 2.11.0.1
  other-modules:
        CTL.ParserSpec,
        CTL.SemanticsSpec,
        LTL.ParserSpec,
        LTL.SemanticsSpec,
        TS.ParserSpec,
